--- a/_posts/2016-02-20-nz-tiere.markdown
+++ b/_posts/2016-02-20-nz-tiere.markdown
@@ -1,13 +1,11 @@
 ---
 layout: post
-title:  "Post Two"
-subtitle: "Untertitel"
+title:  "Neuseeland"
+subtitle: "Tiere"
 date:   2016-02-20
-image: /img/Fiji_1.jpg
+image: /img/nz-3.jpg
 categories: jekyll update
 ---
-
-![Bild](/img/Fiji_1.jpg)
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
