--- a/_posts/2016-02-26-nz-vulkan.markdown
+++ b/_posts/2016-02-26-nz-vulkan.markdown
@@ -1,13 +1,11 @@
 ---
 layout: post
-title:  "Hello World"
-subtitle: "Untertitel"
-date:   2016-03-30
-image: /img/Fiji_1.jpg
+title:  "Neuseeland"
+subtitle: "Auf dem Vulkan"
+date:   2016-02-26
+image: /img/nz-2.jpg
 categories: jekyll update
 ---
-
-![Bild](/img/Fiji_1.jpg)
 
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
