--- a/_posts/2012-03-30-fiji.markdown
+++ b/_posts/2012-03-30-fiji.markdown
@@ -7,12 +7,13 @@ image: /img/fiji-1.jpg
 categories: jekyll update
 ---
 
-## Test
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Wenn man dann schon mal in Neuseeland ist, dann muss man natürlich auch kurz nach Fiji. So unser Plan. Die letzte Woche der Reise soll also auf einer Insel verbracht werden. Erholung nach der Rundreise und den vielen Dingen die man gesehen hat. Der Flug wurde schon vor der Reise gebucht und sollte uns von Auckland zur Hauptinsel der Fijis bringen und eine Woche später wieder zurück um die Heimreise anzutreten. 
+
+So weit so gut der Plan. Wir fliegen nach Fiji, lassen uns von einer netten Dame am Flughafen eine Hütte am Strand vermitteln und werden per Boot hingebracht. Wie verprochen eine abgelegene Hütte am Strand einer Insel, welche man in etwa 20 Minuten gemütlich umrunden kann. Etwas entfernt das Haupthaus des einzigen Resorts der Insel, hier gibts es Essen direkt am Strand und eine Bar mit Pool. Da kann die Entspannung beginnen.
 
 <div class="container-gallery">
 <div><img src="/img/fiji-1.jpg" alt></div>
-<div><img src="/img/nz-2.jpg" alt></div>
+<div><img src="/img/fiji-2.jpg" alt></div>
 </div>
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Was wir allerdings nicht erwartet haben, als wir diesen Plan vor der Reise nach Neuseeland geschmiedet haben war, dass wir von der Rundreise nicht angestrengt sein werden. Wir hatten die 2 Monate keinen Stress oder Hektik oder Lärm um uns von dem wir uns erholen mussten. Auch waren wir es jetzt gewohnt jeden Tag unterwegs zu sein, mit dem Camper einen neuen Ort anzufahren und hier stundenlang zu wandern. Daher war der Aufenthalt auf Fiji eine große Umstellung, da plötzlich die Weite fehlte und es kaum Möglichkeiten gab etwas zu tun, abgesehen von schwimmen, tauchen und sonnen. Ja ich weiß, das kann man sich kaum vorstellen, aber wir waren froh, als wir Fiji wieder verlassen konnten. :-D
