--- a/_posts/2012-02-20-nz-tiere.markdown
+++ b/_posts/2012-02-20-nz-tiere.markdown
@@ -2,9 +2,9 @@
 layout: post
 title:  "Neuseeland"
 subtitle: "Tiere"
-date:   2016-02-20
+date:   2012-02-20
 image: /img/nz-t-1.jpg
-categories: jekyll update
+categories: neuseeland
 ---
 
 Eine der tollsten Dinge an Neuseeland sind die vielen Tiere. Hier sind nicht eingesperrte Tiere im Zoo gemeint sondern Tiere in freier Wildbahn, die man beobachten kann, wenn man zur rechten Zeit am rechten Ort ist. 
