--- a/_posts/2012-02-26-nz-vulkan.markdown
+++ b/_posts/2012-02-26-nz-vulkan.markdown
@@ -4,7 +4,7 @@ title:  "Neuseeland"
 subtitle: "Auf dem Vulkan"
 date:   2012-02-26
 image: /img/nz-v-1.jpg
-categorie: blog
+categories: blog
 ---
 
 Angekommen auf der Nordinsel muss man natürlich auf die Vulkane sehen. 
