show one blog entry on index page

--- a/_posts/2016-04-05-rucksäcke.markdown
+++ b/_posts/2016-04-05-rucksäcke.markdown
@@ -12,7 +12,7 @@ Ganz wichtig für Reisen: Gepäckstücke. Irgendwie muss ja schließlich alles t
 
 Nach langen Überlegungen haben wir uns dazu entschlossen nur mit Handgepäck zu reisen. Dies betet diverse Vorteile, beispielsweise spart man Zeit und Geld, wenn man kein Gepäckstück aufgibt, das Gepäck kann nicht verloren gehen, wenn man es immer bei sich hat und es ist handlicher nur ein einziges Gepäckstück tragen zu müssen. Und wenn man sich mal genau anschaut, was für Regulationen das Handgepäck hat, dann ist das garnicht so wenig. Also, vorher erkundigen, dann recherchieren, dann kaufen.
 
-Nach viel recherchieren haben wir uns für einen [Osprey ...](){:target="_blank"} und einen [Rucksack Flo](){:target="_blank"} entschieden.
+Nach viel recherchieren haben wir uns für einen [Osprey ...] und einen [Rucksack Flo] entschieden.
 
 ## Verena's Rucksack
 
